nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: staging
spec:
  selector:
    app: nginx-app
  ports:
  - name: http
    targetPort: 80
    port: 80
