ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx    
spec:
  tls:
  - hosts:
    - test.rssss.in
    secretName: nginx-app-tls
  rules:
  - host: test.rssss.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-app
            port:
              number: 80
